// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vcl object should contain source maps 1`] = `
"body {
  color: blue
}
/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInZjbC5zc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7RUFDRTtBQURDIiwiZmlsZSI6InZjbC5jc3MiLCJzb3VyY2VzQ29udGVudCI6WyJib2R5XG4gIGNvbG9yOiBibHVlIl19 */"
`;

exports[`vcl object should include local css files 1`] = `
"body {
  background: red;
}
a {
  color: green;
}"
`;

exports[`vcl object should include local sss files 1`] = `
"body {
  background: red;
}
a {
  color: green;
}"
`;

exports[`vcl object should not remove the comment 1`] = `
"/* will not be removed */
body {
  color: blue
}
"
`;

exports[`vcl object should override the theme var 1`] = `".body{background-color:#d9534f}body{color:#00f}"`;

exports[`vcl object should remove the comment 1`] = `"body{color:#00f}"`;

exports[`vcl object should return valid css 1`] = `
"body {
  color: blue
}"
`;

exports[`vcl object should return valid css without any options set 1`] = `
"body {
  color: rgba(204,204,204, .5)
}"
`;
